--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-#index:
-#    path: /
-#    controller: App\Controller\StaticController::accueil
+index:
+    path: /
+    controller: App\Controller\StaticController::accueil
